--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.0.1",
+    "bcrypt": "^5.1.1",
     "next": "15.0.4",
+    "next-auth": "^4.24.11",
     "prisma": "^6.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -25,5 +28,4 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
-  
 }
