--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
+    "cookies-next": "^5.0.2",
     "next": "15.0.4",
     "next-auth": "^4.24.11",
     "prisma": "^6.0.1",
