--- a/checkchue_frontend/package.json
+++ b/checkchue_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project_se_t12",
+  "name": "checkchue_frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,24 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.0.1",
-    "bcrypt": "^5.1.1",
-    "cookies-next": "^5.0.2",
-    "next": "^15.1.0",
-    "next-auth": "^4.24.11",
-    "prisma": "^6.0.1",
-    "qrcode": "^1.5.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.1",
+    "next": "15.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/qrcode": "^1.5.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.4",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
