--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
     "cookies-next": "^5.0.2",
+    "formidable": "^3.5.2",
     "next": "^15.1.0",
     "next-auth": "^4.24.11",
     "prisma": "^6.0.1",
