--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.4.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.0.1",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cookies-next": "^5.0.2",
     "formidable": "^3.5.2",
