--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sweetalert2": "^11.15.10"
+    "sweetalert2": "^11.15.10",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
