--- a/package.json
+++ b/package.json
@@ -9,25 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@fontsource/prompt": "^5.1.1",
-    "@mui/icons-material": "^6.4.0",
-    "@mui/material": "^6.4.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.0.1",
-    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cookies-next": "^5.0.2",
-    "formidable": "^3.5.2",
     "next": "^15.1.0",
     "next-auth": "^4.24.11",
     "prisma": "^6.0.1",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sweetalert2": "^11.15.10",
-    "xlsx": "^0.18.5"
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -39,8 +31,5 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
   }
 }
