--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "cookies-next": "^5.0.2",
     "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
-    "next": "^15.2.0",
     "lucide-react": "^0.476.0",
+    "next": "^15.2.0",
     "next-auth": "^4.24.11",
     "prisma": "^6.0.1",
     "qrcode": "^1.5.4",
@@ -32,7 +32,8 @@
     "react-dom": "^19.0.0",
     "sweetalert2": "^11.15.10",
     "uuid": "^11.1.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
