--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^19.0.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
+    "react-spinners": "^0.15.0",
     "sweetalert2": "^11.15.10",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5",
