--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   postgres:
     image: postgres:latest
@@ -10,6 +11,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+
   pgadmin:
     image: dpage/pgadmin4
     environment:
@@ -19,5 +21,18 @@ services:
       - "5050:80"
     depends_on:
       - postgres
+
+  backend:
+    build: ./ 
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_URL: postgres://user:password@postgres:5432/mydb
+    volumes:
+      - ./backend:/usr/src/app  # Mount local backend directory
+    command: ["npm", "run", "dev"]  # Adjust based on your setup
+
 volumes:
   postgres-data:
