--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,24 +8,14 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: mydb
     ports:
-      - "5432:5432"
+      - "7002:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
-  pgadmin:
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: root
-    ports:
-      - "5050:80"
-    depends_on:
-      - postgres
-
-  backend:
+  app:
     build: ./ 
     ports:
-      - "3000:3000"
+      - "3002:3000"
     depends_on:
       - postgres
     environment:
