--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,15 +13,27 @@ services:
       - postgres-data:/var/lib/postgresql/data
 
   app:
-    build: ./ 
+    build: ./
     ports:
       - "3002:3000"
     depends_on:
       - postgres
     environment:
-      DATABASE_URL: postgres://user:password@postgres:5432/mydb
+      DATABASE_URL: postgres://user:password@10.10.184.148:7002/postgres
     volumes:
-      - ./backend:/usr/src/app  # Mount local backend directory
+      - .:/usr/src/app  # Mount local backend directory
+    command: ["npm", "run", "dev"]  # Adjust based on your setup
+
+  backend:
+    build: ./
+    ports:
+      - "5002:3000"
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_URL: postgres://user:password@10.10.184.148:7002/postgres
+    volumes:
+       - .:/usr/src/app  # Mount local backend directory
     command: ["npm", "run", "dev"]  # Adjust based on your setup
 
 volumes:
