--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,7 +15,7 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.0.1",
+    "@prisma/client": "^6.4.1",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
@@ -26,7 +26,6 @@
     "lucide-react": "^0.476.0",
     "next": "^15.2.0",
     "next-auth": "^4.24.11",
-    "prisma": "^6.0.1",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-datepicker": "^8.1.0",
@@ -48,6 +47,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
